add test for attempt